--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <link rel="shortcut icon" href="./images/mahjong.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/x.png" type="image/x-icon">
   <title>Tic Tac Toe</title>
 </head>
 <body>
-  <h1 id="game-title">Tic Tac Toe</h1>
-  <div id="whose-turn"></div>
-  <div id="game-message"></div>
+  <p id="game-title">Tic Tac Toe</p>
+  <div id="game-information">
+    <div id="game-message"></div>
+    <div id="player-section">
+      <div id="player-list"></div>
+      <div id="whose-turn"></div>
+    </div>
+  </div>
+  <form id="player-setup-form">
+    <!-- input player X's name -->
+    <div class="player-input-container">
+      <input type="text" name="player-x-name" id="player-x-name" required>
+      <span id="player-x-label">Player X</span>
+    </div>
+
+    <!-- input player O's name -->
+    <div class="player-input-container">
+      <input type="text" name="player-o-name" id="player-o-name" required>
+      <span id="player-o-label">Player O</span>
+    </div>
+
+    <!-- submit the player names -->
+    <button type="submit" id="start-game-button">
+      <svg class="svg-icon" style="vertical-align: middle;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <path d="M852.727563 392.447107C956.997809 458.473635 956.941389 565.559517 852.727563 631.55032L281.888889 993.019655C177.618644 1059.046186 93.090909 1016.054114 93.090909 897.137364L93.090909 126.860063C93.090909 7.879206 177.675064-35.013033 281.888889 30.977769L852.727563 392.447107 852.727563 392.447107Z"  />
+      </svg>
+    </button>
+  </form>
   <div id="gameboard">
     <!-- game cells -->
     <div class="cell" data-index="0" id="cell-0"></div>
@@ -29,17 +54,22 @@
     <div class="line horizontal" id='h1'></div>
     <div class="line horizontal" id='h2'></div>
   </div>
-
-  <button id="reset-button">
-    <?xml version="1.0" encoding="UTF-8"?>
-    <!-- Generator: Adobe Illustrator 25.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512.016 512.016" style="enable-background:new 0 0 512.016 512.016;" xml:space="preserve" width="512" height="512">
-      <g fill="#333">
+  <div id="game-settings">
+    <button id="reset-button">
+      <?xml version="1.0" encoding="UTF-8"?>
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512.016 512.016" style="enable-background:new 0 0 512.016 512.016;" xml:space="preserve" width="512" height="512">
         <path d="M256.008,42.675c57.16,0.188,111.87,23.233,151.936,64h-66.603c-11.782,0-21.333,9.551-21.333,21.333   s9.551,21.333,21.333,21.333h88.384c21.874-0.012,39.604-17.742,39.616-39.616V21.341c0-11.782-9.551-21.333-21.333-21.333   s-21.333,9.551-21.333,21.333v44.331C321.782-28.795,160.169-20.343,65.702,84.55C28.733,125.6,6.058,177.523,1.075,232.541   c-1.096,11.814,7.593,22.279,19.407,23.375c0.64,0.059,1.283,0.09,1.927,0.092c10.813,0.138,19.954-7.977,21.099-18.731   C53.35,127.213,145.505,42.82,256.008,42.675z"/>
         <path d="M489.629,256.008c-10.813-0.138-19.954,7.977-21.099,18.731C458.35,391.953,355.076,478.721,237.861,468.54   c-50.715-4.405-98.176-26.825-133.789-63.199h66.603c11.782,0,21.333-9.551,21.333-21.333c0-11.782-9.551-21.333-21.333-21.333   H82.291c-21.868-0.012-39.604,17.706-39.616,39.573c0,0.014,0,0.028,0,0.043v88.384c0,11.782,9.551,21.333,21.333,21.333   s21.333-9.551,21.333-21.333v-44.331c104.893,94.467,266.505,86.015,360.972-18.878c36.97-41.05,59.645-92.973,64.628-147.992   c1.096-11.814-7.593-22.279-19.407-23.375C490.901,256.041,490.265,256.01,489.629,256.008z"/>
-      </g>
-    </svg>
-  </button>
+      </svg>
+    </button>
+    <button id="change-name-button">
+      <?xml version="1.0" encoding="UTF-8"?>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" transform="translate(-2.3, -2.5) scale(1.2)" />
+      </svg>
+    </button>
+  </div>
+
   <script src="./script.js"></script>
 </body>
 </html>
